--- a/cliffs-kiwi-bt-arcfox-evt3.dts
+++ b/cliffs-kiwi-bt-arcfox-evt3.dts
@@ -7,5 +7,5 @@
 	model = "arcfox";
 	compatible = "qcom,cliffs";
 	qcom,msm-id = <614 0x10000>, <632 0x10000>;
-	qcom,board-id = <0x43 0xA300>;
+	qcom,board-id = <0x43 0xA300>, <0x43 0xB1B0>;
 };
