--- a/cliffs-kiwi-bt-ctwo-evb3.dts
+++ b/cliffs-kiwi-bt-ctwo-evb3.dts
@@ -7,5 +7,5 @@
 	model = "ctwo";
 	compatible = "qcom,cliffs";
 	qcom,msm-id = <614 0x10000>, <632 0x10000>;
-	qcom,board-id = <0x41 0x9300>;
+	qcom,board-id = <0x41 0x9300>, <0x41 0xB100>;
 };
