--- a/cliffs-kiwi-bt-ctwo.dtsi
+++ b/cliffs-kiwi-bt-ctwo.dtsi
@@ -76,7 +76,7 @@
 };
 
 // FM changes
-&qupv3_se0_i2c {
+/*&qupv3_se0_i2c {
 	status = "ok";
 	nq@64 {
 		compatible = "rtc6226";
@@ -88,4 +88,4 @@
 		vio-supply = <&L7B>;
 		rtc6226,vio-supply-voltage = <1800000 1800000>;
 	};
-};
+};*/
